k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lib-ingress
  namespace: k8s
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing # Public-facing ALB
    alb.ingress.kubernetes.io/target-type: EC2 # Use "instance" if using EC2 workers
    alb.ingress.kubernetes.io/healthcheck-path: / # Adjust based on your app
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
